handson/mongo_db_express_ks8_baremetal_cluster/handson_lab/mongoDB.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: mongoxxpress
  labels:
    app: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 2
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: mongodb
        image: docker.io/mongo
        #restart: always
        ports:
        - containerPort: 27017
      tolerations:
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongoxxpress
spec:
  selector:
    app: mongodb
  #type: LoadBalancer
  ports:
  - protocol: TCP
    port: 27017 
    targetPort: 27017
