handson/mongo_db_express_ks8_baremetal_cluster/handson_lab/mongoExpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 2
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express    
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081 
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 30001
