handson/mongo_db_express_ks8_baremetal_cluster/handson_lab/mongoExpress_intService.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: mongoxxpress
  #namespace: mongoexpress-namespace
  labels:
    app: mongo-express
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 2
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: mongo-express
        image: docker.io/mongo-express
        ports:
        - containerPort: 8081
      tolerations:
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongoxxpress
  #namespace: mongoexpress-namespace
spec:
  selector:
    app: mongo-express    
  type: LoadBalancer
  ## Instead of exposing nodeip, use port-forward [kubectl port-forward svc/mongo-express-service 9091]
  externalIPs:
  -  10.1.0.10
  -  10.1.0.11
  -  10.1.0.12
  #type: NodePort
  ports:
  - protocol: TCP
    ##mongoxxpress namespace port
    port: 8081
    ##mongoexpress-namespace port
    #port: 8091
    targetPort: 8081
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    ## only required for montoxxpres namespace for directly nodeport access external
    nodePort: 30005

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-external-service
  #namespace: mongoxxpress
  namespace: mongoexpress-namespace
spec:
  selector:
    app: mongo-express    
  type: ExternalName
  externalName: mongodb-service.mongoxxpress.svc.cluster.local
  ports:
  - protocol: TCP
    port: 27017
    #targetPort: 8091 
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.


   ##FOR INGRESS PRIVATE SERVICE
---
apiVersion: v1
kind: Service 
metadata:
  name: mongo-express-ingress-service
  namespace: mongoexpress-namespace 
spec:
  selector:
    app: mongo-express 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
