handson/mongo_db_express_ks8_baremetal_cluster/handson_lab/mongoExpress-ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  #namespace: my-namespace
spec:
  rules:
  #- host: mymongoexpress.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
